--- a/.github/workflows/deploy_to_ecs.yml
+++ b/.github/workflows/deploy_to_ecs.yml
@@ -11,6 +11,8 @@ env:
   ECS_SERVICE: iris-classifier-service
   ECS_TASK_DEFINITION_FILE: ecs/task-definition.json
   CONTAINER_NAME: iris_classifier_task-service-11fghphe
+  MLFLOW_TRACKING_USERNAME: ${{secrets.MLFLOW_TRACKING_USERNAME}}
+  MLFLOW_TRACKING_PASSWORD: ${{secrets.MLFLOW_TRACKING_PASSWORD}}
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
