--- a/.github/workflows/deploy_to_ecs.yml
+++ b/.github/workflows/deploy_to_ecs.yml
@@ -31,6 +31,12 @@ jobs:
           python-version: '3.11'
       - name: Install Python dependencies for model download
         run: pip install mlflow boto3
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
       - name: Download "Production" stage model from MLflow Registry
         run: |
           # This inline Python script connects to MLflow and downloads the model
