Github actions add s3 ls to check

--- a/.github/workflows/deploy_to_ecs.yml
+++ b/.github/workflows/deploy_to_ecs.yml
@@ -37,6 +37,8 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
+      - name: Test MLflow S3 access
+        run: aws s3 ls s3://anebula-modelops-prod-pipeline-artifacts/
       - name: Download "Production" stage model from MLflow Registry
         run: |
           # This inline Python script connects to MLflow and downloads the model
